# signature-rs

./: .gitignore  CITATION.cff  Cargo.toml  README.md  deny.toml
commutator-py/: Cargo.toml  README.md  commutator_py.pyi  pyproject.toml
commutator-py/src/: commutator.rs  formal_indeterminate.rs  lib.rs
commutator-py/test/: test_commutator_py.py
commutator-rs/: Cargo.toml  README.md
commutator-rs/examples/: basic_commutators.rs  formal_indeterminates.rs
commutator-rs/src/: commutator.rs  formal_indeterminate.rs  lib.rs
lie-cl/: Cargo.toml
lie-cl/src/: lib.rs  lie_series.rs
lie-py/: Cargo.toml  README.md  lie_py.pyi  pyproject.toml
lie-py/src/: bch_series_generator.rs  lib.rs  lie_series.rs
lie-py/test/: test_bch_series_generator.py  test_lie_series.py
lie-rs/: Cargo.toml  README.md  deny.toml
lie-rs/examples/: baker_campbell_hausdorff.rs  lie_algebra_computations.rs
lie-rs/src/: bch.rs  bch_series_generator.rs  constants.rs  lib.rs  lie_series.rs  rooted_tree.rs
lyndon-cl/: Cargo.toml
lyndon-cl/src/: lib.rs
lyndon-py/: Cargo.toml  README.md  lyndon_py.pyi  pyproject.toml
lyndon-py/src/: lib.rs
lyndon-py/test/: test_lyndon_py.py
lyndon-py/typings/lyndon_py/: __init__.pyi
lyndon-rs/: Cargo.toml  README.md
lyndon-rs/examples/: basic_lyndon_words.rs  lyndon_factorization.rs
lyndon-rs/src/: generators.rs  lib.rs  lyndon.rs
signature-cl/: Cargo.toml
signature-cl/src/: lib.rs  log_signature.rs  log_signature_builder.rs
signature-py/: Cargo.toml  README.md  pyproject.toml  signature_py.pyi
signature-py/src/: lib.rs  log_sig.rs
signature-py/test/: test_log_sig.py
signature-rs/: Cargo.toml  README.md
signature-rs/examples/: basic_log_signature.rs  time_series_analysis.rs
signature-rs/src/: lib.rs  log_sig.rs
src/: bch.rs  bch_series_generator.rs  commutator.rs  constants.rs  generators.rs  lib.rs  lie_series.rs  log_sig.rs  lyndon.rs  lyndon_word.rs  main.rs  rooted_tree.rs
