[package]
name = "signature-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "^1.0.1"
indicatif = {version = "^0.18.0", optional = true}
ndarray = "^0.16.1"
num-bigint = "^0.4.6"
num-integer = "^0.1.46"
num-rational = "^0.4.2"
num-traits = "^0.2.19"
ordered-float = "^5.0.0"
rayon = "^1.10.0"
thiserror = "^2.0.12"

[dev-dependencies]
rstest = "^0.26.1"

[features]
default = []
progress = ["indicatif"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
