[package]
name = "signature-rs-bin"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/ChosunOne/signature-rs"
readme = "README.md"
keywords = ["log", "signature", "algebra", "lie", "free"]
categories = ["data-structures", "mathematics", "science", "algorithms"]

[workspace]
members = ["lyndon-rs", "commutator-rs", "lie-rs", "signature-rs"]
resolver = "3"

[dependencies]
ndarray = "^0.16.1"
ordered-float = "^5.0.0"
num-traits = "^0.2.19"
lie-rs = {path = "./lie-rs"}
lyndon-rs = {path = "./lyndon-rs"}
commutator-rs = {path = "./commutator-rs"}
signature-rs = {path = "./signature-rs"}
clap = {version = "^4.5.45", features = ["derive"] }
polars = { version = "^0.50.0", features = ["ndarray", "lazy", "csv", "parquet", "polars-io", "json"] }
file_type = "^0.8.8"

[dev-dependencies]

[hints.polars]
mostly-unused = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
