[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "commutator-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "lyndon-py",
    "maturin>=1.9.3",
    "pytest>=8.3.5",
]
[tool.maturin]
features = ["pyo3/extension-module"]
[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file="**/*.rs"}]

[tool.uv.sources]
lyndon-py = { path = "../lyndon-py", editable = true }
