[package]
name = "commutator-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/ChosunOne/signature-rs"
readme = "README.md"
keywords = ["commutator", "lie", "algebra", "commute", "abstract"]
categories = ["data-structures", "mathematics", "science"]

[dependencies]
lyndon-rs = {path = "../lyndon-rs"}
num-traits = "^0.2.19"

[dev-dependencies]
rstest = "^0.26.1"
