[package]
name = "lie-rs"
version = "0.1.0"
authors = ["ChosunOne"]
edition = "2024"
license = "AGPL-3.0-only"
description = "Lie series and Baker-Campbell-Hausdorff formula computations"
documentation = "https://docs.rs/lie-rs"
homepage = "https://github.com/ChosunOne/signature-rs"
repository = "https://github.com/ChosunOne/signature-rs"
readme = "README.md"
keywords = ["lie", "bch", "algebra", "series", "baker"]
categories = ["data-structures", "mathematics", "science", "algorithms"]

[dependencies]
commutator-rs = {path = "../commutator-rs"}
lyndon-rs = {path = "../lyndon-rs"}
num-traits = "^0.2.19"
rayon = "^1.11.0"
indicatif = {version = "^0.18.0", optional = true}

[dev-dependencies]
rstest = "^0.26.1"
num-rational = "^0.4.2"
ordered-float = "^5.0.0"

[features]
default = []
progress = ["indicatif"]
