[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "lyndon-py"
version = "0.1.0"
authors = [
    {name = "signature-rs contributors"},
]
description = "Fast Lyndon word operations and canonical bases for free Lie algebras"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "lyndon-words",
    "lie-algebra",
    "free-lie-algebra",
    "combinatorics",
    "algebraic-combinatorics",
    "rough-paths",
    "signatures",
]
license = {text = "AGPL-3.0-only"}
homepage = "https://github.com/ChosunOne/signature-rs"
repository = "https://github.com/ChosunOne/signature-rs"
documentation = "https://github.com/ChosunOne/signature-rs/tree/main/lyndon-py"
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.9.3",
    "pytest>=8.3.5",
    "pytest-cov",
    "black",
    "isort",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov",
]
[tool.maturin]
features = ["pyo3/extension-module"]
[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file="**/*.rs"}]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
