[package]
name = "lyndon-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/ChosunOne/signature-rs"
readme = "README.md"
keywords = ["free", "lie", "algebra", "lyndon", "basis"]
categories = ["data-structures", "mathematics", "science", "algorithms"]

[dependencies]
thiserror = "^2.0.15"

[dev-dependencies]
rstest = "^0.26.1"

