[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "signature-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "lyndon-py",
    "commutator-py",
    "lie-py",
    "maturin>=1.9.3",
    "pytest>=8.3.5",
    "numpy>=1.24.4",
]
[tool.maturin]
features = ["pyo3/extension-module"]
[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file="**/*.rs"}]

[tool.uv.sources]
lyndon-py = { path = "../lyndon-py", editable = true }
commutator-py = { path = "../commutator-py", editable = true }
lie-py = { path = "../lie-py", editable = true }

[dependency-groups]
dev = [
    "jax>=0.4.13",
]
