[package]
name = "signature-rs"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
ndarray = "^0.16.1"
num-traits = "^0.2.19"
ordered-float = "^5.0.0"
lie-rs = {path = "../lie-rs"}
lyndon-rs = {path = "../lyndon-rs"}
commutator-rs = {path = "../commutator-rs"}

[dev-dependencies]
rstest = "^0.26.1"
num-rational = "^0.4.2"
