[package]
name = "signature-rs"
version = "0.1.0"
authors = ["ChosunOne"]
edition = "2024"
license = "AGPL-3.0-only"
description = "High-performance log signature computation for paths and time series data"
documentation = "https://docs.rs/signature-rs"
homepage = "https://github.com/ChosunOne/signature-rs"
repository = "https://github.com/ChosunOne/signature-rs"
readme = "README.md"
keywords = ["log-signature", "algebra", "lie", "rough-paths", "time-series"]
categories = ["mathematics", "science", "algorithms", "data-structures"]

[dependencies]
ndarray = "^0.16.1"
num-traits = "^0.2.19"
ordered-float = "^5.0.0"
lie-rs = {path = "../lie-rs"}
lyndon-rs = {path = "../lyndon-rs"}
commutator-rs = {path = "../commutator-rs"}

[dev-dependencies]
rstest = "^0.26.1"
num-rational = "^0.4.2"
